WebCore:

2008-06-08  Vincent Ricard  <magic@magicninja.org>

        Reviewed by Darin.

        https://bugs.webkit.org/show_bug.cgi?id=16489
        WebKit does not support ElementTraversal specification

        Tests: fast/dom/Element/element-traversal.html

        * dom/Element.cpp:
        (WebCore::Element::firstElementChild):
        (WebCore::Element::lastElementChild):
        (WebCore::Element::previousElementSibling):
        (WebCore::Element::nextElementSibling):
        (WebCore::Element::childElementCount):
        * dom/Element.h:
        * dom/Element.idl:

LayoutTests:

2008-06-08  Vincent Ricard  <magic@magicninja.org>

        Reviewed by Darin.

        test cases for https://bugs.webkit.org/show_bug.cgi?id=16489
        WebKit does not support ElementTraversal specification

        * fast/dom/Element/element-traversal-expected.txt: Added.
        * fast/dom/Element/element-traversal.html: Added.
        * fast/dom/Element/resources/element-traversal.js: Added.

        * fast/dom/domListEnumeration-expected.txt: Updated since Element now has 5
        new properties. It would be good to rewrite this test so it doesn't have to
        be updated every time we add a property to Node or Element.
        * fast/dom/resources/domListEnumeration.js: Ditto.



Canonical link: https://commits.webkit.org/26903@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34452 268f45cc-cd09-0410-ab3c-d52691b4dbfc